--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-To be developed.  This is a restart of the Bitcointalk visualization project.
+To be developed.  
 Just setting things up right now.  Will reiterate the goals and have more information in a bit.
 
 Goals are to perform machine learning on natural language data coming from twitter, articles, and forum threads regarding different coins and tokens on the market to produce meaningful visualizations and reports for the user. Some of the visualizations are unique and based on novel work of the authors.  We can implement this in stages - each with its own functionality.  Working with natural language data for feature generation and modeling requires a system of semantics which we will build using data sets produced using techniques such as targetted web searches.  We will build models capabale of detecting emotions in text and overall sentiment as well as a number of classes related to market health and activity.   We will maintain growing databases of data used throughout this process such as the word frequency arrays, price and volume data, raw documents for a time, derived features such as predicted emotion etc, and so on.  We need to put a lot of thought into the DB, likely opting for both SQL and NoSQL options.
 
-I have a lot of things I want to do - deep learning, some rather sophisticated visualization ideas, etc.  We will decide formally on what directions we will go on the project board.  Stay tuned for a rewrite of this whole section.  I will combine this with the bitcointalk visualization project where a ton of ideas are posted for possible directions.  We decided to not restrict ourselves to bitcointalk but it will still be a big source of data and can be visualized on its own.
+Visualizations for iteration one include word cloud sentiment score plots, emotion plots, and GLC chernoff faces. A lot of our visualizations require machine learning and building of ontologies so we will have a machine learning server set up with a GPU mining document sets and training models for deployment.  Gathering of data is achieved via cloud deployed docker containers, with nginx for load balancing, ideally enough to deal with a sizeable number of API requests. 
